added missing param to ids endpoint doc
