# openapi.yaml
@@ -162,6 +162,13 @@ paths:
         only "poems" is implemented.
       operationId: get_entity_ids
       parameters:
+      - in: path
+        name: corpusname
+        description: Name/ID of the corpus.
+        required: true
+        example: postdata
+        schema:
+          type: string
       - in: query
         name: type
         description: Entity type for which IDs should be returned, e.g. "poems".
@@ -209,52 +216,52 @@ components:
     CorpusMetrics:
       type: object
       properties:
-        verses:
-          type: integer
-        grammatical_syllables:
+        words:
           type: integer
         poems:
           type: integer
-        metrical_syllables:
+        stanzas:
           type: integer
-        words:
+        metrical_syllables:
           type: integer
         authors:
           type: integer
-        stanzas:
+        verses:
+          type: integer
+        grammatical_syllables:
           type: integer
     CorpusMetadata:
       type: object
       properties:
         metrics:
           $ref: '#/components/schemas/CorpusMetrics'
-        title:
-          type: string
         name:
+          type: string
+        title:
           type: string
         description:
           type: string
     AuthorMetadata:
       type: object
       properties:
-        name:
-          type: string
         uri:
+          type: string
+        name:
           type: string
     PoemMetadata:
       type: object
       properties:
-        authors:
-          type: array
-          items:
-            $ref: '#/components/schemas/AuthorMetadata'
         sourceUri:
+          type: string
+        uri:
           type: string
         name:
           type: string
         source:
           type: string
+        authors:
+          type: array
+          items:
+            $ref: '#/components/schemas/AuthorMetadata'
         id:
-          type: string
-        uri:
           type: string
